<resources>
    <string name="app_name">Sunbelt Test</string>

    <!-- FIREBASE SIGN IN MSGS -->
    <string name="sign_in_cancelled">Login cancelled</string>
    <string name="no_internet_connection">Not internet connection</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="app_description">News Example</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_sources">Sources</string>
    <string name="title_news">News</string>
    <string name="title_account">Account</string>

    <string name="default_profile_name">John Doe</string>
    <string name="default_profile_email">john.doe@sunbeltfactory.com</string>
    <string name="close_sesion">Logout</string>

    <string name="timeFormatToday">Today %1$s</string>
    <string name="timeFormatTomorrow">Tomorrow %1$s</string>
    <string name="timeFormatNow">Just now</string>
    <string name="timeFormatMinute">A minute ago</string>
    <string name="timeFormatMinutes">%1$d minutes ago</string>
    <string name="timeFormatHour">A hour ago</string>
    <string name="timeFormatHours">%1$d hours ago</string>
    <string name="timeFormatDay">Yesterday</string>
    <string name="timeFormatDays">%1$d days ago</string>

    <string name="score"> - </string>
    <string name="pending">Pending...</string>
</resources>
