<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_sources"
        android:name="com.sunbeltfactory.sunbelttest.ui.sources.SourcesFragment"
        android:label="@string/title_sources"
        tools:layout="@layout/fragment_sources" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.sunbeltfactory.sunbelttest.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.sunbeltfactory.sunbelttest.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>